# snakepro

./: .gitignore  CMakeLists.txt  README.md
include/: food.h  map.h  snake.h  tools.h
src/: controller.cpp  food.cpp  main.cpp  map.cpp  snake.cpp  startinterface.cpp  tools.cpp
